--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  margin-bottom: -2rem;
+  background-color: #272727;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ffffff;
 }
 
 .App-link {
